# linear-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MSBuild.bat  Makefile.am  README.md  bootstrap  common.gypi  configure.ac  configure.py  create_version_h.py  liblinear.pc.in  linear.gyp  openssl.gypi  pre-build.bat  vcbuild.bat
.github/workflows/: develop.yml  production.yml
doc/: Doxyfile  Makefile.am
include/: Makefile.am
include/linear/: Makefile.am  addrinfo.h  any.h  auth_context.h  binary.h  client.h  condition_variable.h  error.h  event_loop.h  group.h  handler.h  log.h  memory.h.in  message.h  msgpack_inc.h  mutex.h  nil.h  optional.h  server.h  socket.h  ssl_client.h  ssl_context.h  ssl_server.h  ssl_socket.h  tcp_client.h  tcp_server.h  tcp_socket.h  timer.h  version.h.in  ws_client.h  ws_context.h  ws_server.h  ws_socket.h  wss_client.h  wss_server.h  wss_socket.h  x509_certificate.h
include/linear/private/: Makefile.am  extern.h  message_priv.h  observer.h
sample/: Makefile.am  common.gypi  configure.py  linear-sample.gyp  lperf.cpp  ssl_client_sample.cpp  ssl_server_sample.cpp  tcp_client_sample.cpp  tcp_server_sample.cpp  ws_client_sample.cpp  ws_server_sample.cpp  wss_client_sample.cpp  wss_server_sample.cpp
sample/certs/: ATTENTION  ca.der  ca.pem  client-w-pass.key  client-w-pass.pem  client.der  client.key  client.key.der  client.pem  gencert.sh  server-w-pass.key  server-w-pass.pem  server.der  server.key  server.key.der  server.pem
src/: Makefile.am  addrinfo.cpp  any.cpp  auth_context.cpp  auth_context_impl.cpp  auth_context_impl.h  client_impl.h  condition_variable.cpp  error.cpp  event_loop.cpp  event_loop.h  event_loop_impl.cpp  event_loop_impl.h  group.cpp  handler.cpp  handler_delegate.cpp  handler_delegate.h  log.cpp  log.h  log_file.cpp  log_file.h  log_function.cpp  log_function.h  log_stderr.cpp  log_stderr.h  message.cpp  mutex.cpp  mutex_impl.h  nonce_pool.h  server.cpp  server_impl.h  socket.cpp  socket_impl.cpp  socket_impl.h  socket_pool.h  ssl_client.cpp  ssl_client_impl.cpp  ssl_client_impl.h  ssl_context.cpp  ssl_server.cpp  (+37 more)
test/: Makefile.am  addrinfo_test.cpp  any_test.cpp  log_file_test.cpp  log_file_test.sh  log_function_test.cpp  log_function_test.sh  log_macro4file_debug_test.sh  log_macro4file_nodebug_test.sh  log_macro4file_test.cpp  log_macro4function_debug_test.sh  log_macro4function_nodebug_test.sh  log_macro4function_test.cpp  log_macro4stderr_debug_test.sh  log_macro4stderr_nodebug_test.sh  log_macro4stderr_test.cpp  log_onoff_test.cpp  log_onoff_test.sh  log_stderr_test.cpp  log_stderr_test.sh  log_test.cpp  log_test.sh  optional_test.cpp  run_tests.cpp  run_tests.sh  ssl_client_server_connection_test.cpp  ssl_client_server_send_recv_test.cpp  tcp_client_server_connection_test.cpp  tcp_client_server_send_recv_test.cpp  test_common.cpp  test_common.h  timer_test.cpp  ws_client_server_connection_test.cpp  ws_client_server_send_recv_test.cpp  wss_client_server_connection_test.cpp  wss_client_server_send_recv_test.cpp
test/CACert/: ca.pem
tools/: create_header.py  create_memory_h.py  create_version_h.py
